refactor(data): 移除mockData并实现LocalStorage数据持久化
重构数据服务，移除mockData模块，改用LocalStorage存储用户数据
添加数据初始化逻辑，确保应用首次加载时有默认数据
实现用户持仓和钱包数据的自动保存功能
保留市场数据和基金数据的生成逻辑，但改为从dataService获取

--- a/.trae/documents/替换总价值和盈亏字段为持仓金额和持仓盈亏.md
+++ b/.trae/documents/替换总价值和盈亏字段为持仓金额和持仓盈亏.md
@@ -30,7 +30,7 @@
 
 ## 技术实现要点
 1. 保持数据结构的一致性，避免冗余字段
-2. 确保所有计算逻辑（如盈亏比例计算）使用正确的字段
+2. 确保所有计算逻辑（如盈亏率计算）使用正确的字段
 3. 保持代码风格和命名规范的一致性
 4. 确保修改后的数据流转和渲染逻辑正常工作
 
